--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,24 +4,36 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Spring Security Example</title>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 	<div th:if="${param.error}">Invalid user name and password.</div>
 	<div th:if="${param.logout}">You have been logged out.</div>
 	<form th:action="@{/login}" method="post">
-		<div>
-			<label> User Name : <input type="text" name="username" />
-			</label>
+		<div class="form-group">
+			<label> User Name :</label> <input type="text" name="username" />
+		</div>
+		<div class="form-group">
+			<label> Password:</label> <input type="password" name="password" />
 		</div>
 		<div>
-			<label> Password: <input type="password" name="password" />
-			</label>
+			<input class="btn btn-default" type="submit" value="Sign In" />
 		</div>
-		<div>
-			<input type="submit" value="Sign In" />
-		</div>
+
 		<a href="/adduser">Sing up</a>
 	</form>
+
 </body>
 </html>
